module architecutre development - calendarmodule, mocked unittesting
